--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"name" : "Cornea",
 	"version" : "1.0",
   "background": {
-      "persistent": false,
+      "persistent": true,
       "scripts": ["jquery.js","background.js" ]
    },
 	
